--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "nodemon": "^2.0.3",
     "sqlite3": "^4.1.1"
   }
 }
